force-app/main/default/objects/HP_Contrat__c/HP_Contrat__c.object-meta.xml
<CustomObject>
    <label>Contrat Happe</label>
    <nameField>
        <displayFormat>HPC-{0000}</displayFormat>
        <label>Nom du Contrat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrats Happe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>