force-app/main/default/objects/HP_Contrat__c/fields/HP_CodeOffre__c.field-meta.xml
<CustomField>
    <fullName>HP_CodeOffre__c</fullName>
    <label>Code Offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>