force-app/main/default/objects/HP_Contrat__c/fields/HP_CodeStatutContrat__c.field-meta.xml
<CustomField>
    <fullName>HP_CodeStatutContrat__c</fullName>
    <label>Code Statut contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>