force-app/main/default/objects/HP_Contrat__c/fields/HP_CodeStatutPropositionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>HP_CodeStatutPropositionCommerciale__c</fullName>
    <label>Code Statut Proposition commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>