force-app/main/default/objects/HP_Contrat__c/fields/HP_Compteur_Variable_Plan_prix_Index__c.field-meta.xml
<CustomField>
    <fullName>HP_Compteur_Variable_Plan_prix_Index__c</fullName>
    <label>Index Elec HP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>