force-app/main/default/objects/HP_Contrat__c/fields/HP_Contrat_XdataId__c.field-meta.xml
<CustomField>
    <fullName>HP_Contrat_XdataId__c</fullName>
    <externalId>true</externalId>
    <label>Id Xdata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>