force-app/main/default/objects/HP_Contrat__c/fields/HP_DateDebutContratSouhaite__c.field-meta.xml
<CustomField>
    <fullName>HP_DateDebutContratSouhaite__c</fullName>
    <label>Date de début contrat souhaité</label>
    <type>Date</type>
</CustomField>