force-app/main/default/objects/HP_Contrat__c/fields/HP_DateDernierEvenement__c.field-meta.xml
<CustomField>
    <fullName>HP_DateDernierEvenement__c</fullName>
    <label>Date du dernier événement</label>
    <type>DateTime</type>
</CustomField>