force-app/main/default/objects/HP_Contrat__c/fields/HP_DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>HP_DateFinContrat__c</fullName>
    <label>Date de fin de contrat</label>
    <type>Date</type>
</CustomField>