force-app/main/default/objects/HP_Contrat__c/fields/HP_DateResiliation__c.field-meta.xml
<CustomField>
    <fullName>HP_DateResiliation__c</fullName>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>