force-app/main/default/objects/HP_Contrat__c/fields/HP_DateValidite__c.field-meta.xml
<CustomField>
    <fullName>HP_DateValidite__c</fullName>
    <label>Date de validité</label>
    <type>Date</type>
</CustomField>