force-app/main/default/objects/HP_Contrat__c/fields/HP_DernierSousTypeModification__c.field-meta.xml
<CustomField>
    <fullName>HP_DernierSousTypeModification__c</fullName>
    <label>Dernier sous-type de modification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>