force-app/main/default/objects/HP_Contrat__c/fields/HP_DernierTypeModification__c.field-meta.xml
<CustomField>
    <fullName>HP_DernierTypeModification__c</fullName>
    <label>Dernier type de modification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>