force-app/main/default/objects/HP_Contrat__c/fields/HP_Id_Compteur__c.field-meta.xml
<CustomField>
    <fullName>HP_Id_Compteur__c</fullName>
    <label>Id Compteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>