force-app/main/default/objects/HP_Contrat__c/fields/HP_Index_de_Compteur__c.field-meta.xml
<CustomField>
    <fullName>HP_Index_de_Compteur__c</fullName>
    <label>Index Gaz</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>