force-app/main/default/objects/HP_Contrat__c/fields/HP_Numero_reference_du_Compteur__c.field-meta.xml
<CustomField>
    <fullName>HP_Numero_reference_du_Compteur__c</fullName>
    <label>Numéro référence du Compteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>