force-app/main/default/objects/HP_Contrat__c/fields/HP_PortefeuilleContratXdataId__c.field-meta.xml
<CustomField>
    <fullName>HP_PortefeuilleContratXdataId__c</fullName>
    <label>Portefeuille Contrat Xdata Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>