force-app/main/default/objects/HP_Contrat__c/fields/HP_Proposition_Commerciale_XdataId__c.field-meta.xml
<CustomField>
    <fullName>HP_Proposition_Commerciale_XdataId__c</fullName>
    <externalId>true</externalId>
    <label>Proposition Commerciale XdataId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>