force-app/main/default/objects/HP_Contrat__c/fields/HP_RaisonAvenant__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonAvenant__c</fullName>
    <label>Raison Avenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>