force-app/main/default/objects/HP_Contrat__c/fields/HP_Souscription__c.field-meta.xml
<CustomField>
    <fullName>HP_Souscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Souscription</label>
    <referenceTo>HP_Souscription__c</referenceTo>
    <relationshipName>HP_Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>