force-app/main/default/objects/HP_Contrat__c/fields/HP_StatutContrat__c.field-meta.xml
<CustomField>
    <fullName>HP_StatutContrat__c</fullName>
    <label>Statut contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>