force-app/main/default/objects/HP_Contrat__c/fields/HP_StatutPropositionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>HP_StatutPropositionCommerciale__c</fullName>
    <label>Statut Proposition commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>