force-app/main/default/objects/HP_Contrat__c/fields/HP_Type_de_Compteur__c.field-meta.xml
<CustomField>
    <fullName>HP_Type_de_Compteur__c</fullName>
    <label>Type de Compteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAS</fullName>
            </value>
            <value>
                <fullName>ELEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>