force-app/main/default/objects/HP_Contrat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HP_Contrat_XdataId__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>