force-app/main/default/objects/HP_Contrat__c/listViews/HP_Tous_les_contrats_lectricit.listView-meta.xml
<ListView>
    <fullName>HP_Tous_les_contrats_lectricit</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HP_Contrat_XdataId__c</columns>
    <columns>HP_Type_de_Compteur__c</columns>
    <columns>HP_Id_Compteur__c</columns>
    <columns>HP_Porte_Feuille_Contrat__c</columns>
    <columns>HP_Souscription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_Type_de_Compteur__c</field>
        <operation>equals</operation>
        <value>ELEC</value>
    </filters>
    <label>happ-e : Tous les contrats électricité</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>